# openenv-cloudsoc

./: .gitignore  00_START_HERE.md  COMPLIANCE_CHECKLIST.md  DEPLOYMENT.md  Dockerfile  ENVIRONMENT_FIX.txt  ENVIRONMENT_VARIABLES.md  GITHUB_READY.txt  GITHUB_SETUP.md  GIT_STATUS.txt  HOW_TO_TEST.md  INDEX.md  LICENSE  MODEL_RECOMMENDATIONS.md  PHASE_2_COMPLETION.md  PHASE_2_VERIFICATION.md  README.md  SETUP.md  SUMMARY.txt  TESTING.md  VALIDATION_SUMMARY.txt  _check_yaml.py  _full_validation.py  _test_edge.py  _test_hf_env.py  _verify.py  cloud_soc_env.py  debug_cloudsoc.py  dummy_server.py  graders.py  inference.py  openenv.yaml  output.txt  pyproject.toml  requirements.txt  test_cloudsoc.py  test_inference.ps1  test_inference.py  validate_format.py
env/: __init__.py  graders.py
server/: app.py
