[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-cloudsoc"
version = "1.0.0"
description = "A benchmark environment for evaluating LLM agents on cloud security incident response."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "PyYAML>=6.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"